[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["equal-l2 <eng.equall2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.16.7"
num-complex = "0.3.0"
rayon = "1.3.1"
palette = { version = "0.5.0", default-features = false, features = ["std", "named"] }
